--- a/static/base/css/custom.css
+++ b/static/base/css/custom.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Work Sans', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 17px;
-  color: #2c8abb;
+  color: #008079;
   background: #F8F8F8;
 }
 
@@ -280,7 +280,7 @@ a {
   position: fixed;
   bottom: 0;
   padding: 13px 15px;
-  background-color: #2c8abb;
+  background-color: #008079;
   color: #fff;
   text-decoration: none !important;
   transition: 0.2s ease-in-out 0s;
@@ -306,7 +306,7 @@ a {
 
 .toggle-button:hover, 
 .toggle-button:focus {
-  background-color: #217aa9;
+  background-color: #008046;
   color: #fff;
 }
 
@@ -1010,7 +1010,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .custom-panel .panel-heading {
   border: none;
-  background-color: #298ec1;
+  background-color: #008079;
   border-radius: 10px 10px 0 0;
   display: flex;
   justify-content: space-between;
