--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700" rel="stylesheet">
     <link href="{{ STATIC_URL }}base/css/custom.css" rel="stylesheet" media="screen">
-    <link href="{{ STATIC_URL }}base/css/bigdataService.css" rel="stylesheet" media="screen">
     <link href="{{ STATIC_URL }}base/css/custom-media.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="{{ STATIC_URL }}base/css/bootstrap-multiselect.css" type="text/css">
     <link rel="stylesheet" href="{{ STATIC_URL }}admin/css/HoldOn.min.css" type="text/css">
@@ -25,13 +24,13 @@
 <body>
 
 {% if user_own %}
-    <header class="header-navbar" style="background-color: #32A1DB">
+    <header class="header-navbar" style="background-color: #008079">
         <div class="">
             <div class="header-content clearfix">
                 <div class="header-left clearfix pull-left">
                     <h1 class="pull-left logo-tag">
-{#                        <a href="{% url 'index' %}"><img src="{{ STATIC_URL }}/base/images/logo.png" alt="Ekbana" height="20"><span>Task Scheduler</span>#}
-                        <a href="{% url 'index' %}"><span>Sunya</span>
+{#                        <a href="{% url 'index' %}"><img src="{{ STATIC_URL }}/base/images/logo2.png" alt="Ekbana" height="20"><span>Task Scheduler</span>#}
+                        <a href="{% url 'index' %}"><span style="width: 40px; height: 25px; font-weight: bold;">SUNYA</span>
                         </a></h1>
                 </div>
                 <div class="header-right clearfix pull-right">
@@ -68,17 +67,6 @@
                         <img src="{{ v.icon_path }}{{ v.icon_name }}"></i>
                         <span class="span-link">{{ v.name }}</span></a></li>
                 {% endfor %}
-
-                <li><a data-toggle="collapse" href="#sidenav2" class="arw collapsed"><i style="margin-top: -3px;">
-                    <img src="/static/base/images/cluster.png"></i><span class="span-link">Cluster</span></a>
-                    <ul id="sidenav2" class="collapse ul-sidebar">
-                        <li><a href="" ></a></li>
-                        {% for cluster in clusters %}
-                            <li><a href="{% url 'cluster' %}?cluster={{ cluster }}">{{ cluster }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </li>
-
             </ul>
             <a class="toggle-button" role="button" title="Toggle sidebar"
                type="button"><span>Collapse Sidebar</span></a>
