--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,69 @@
 {% load static %}
 
 {% block content %}
+
+    <div class="panel panel-default">
+        <div class="table-responsives">
+            <div id="example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+                <div class="row">
+                    <div class="col-sm-12">
+
+                        <table id="tasks" class="table table-striped table-bordered dataTable"
+                               style="width: 100%;" role="grid" aria-describedby="example_info">
+                            <thead>
+                            <tr role="row">
+                                <th class="sorting_asc" tabindex="0" rowspan="1" colspan="1" style="width: 209px;"
+                                    aria-sort="ascending"
+                                    aria-label="Name: activate to sort column descending">
+                                    ID
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Address
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Contact Number
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Email
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Age
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Gender
+                                </th>
+                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-label="Position: activate to sort column ascending">
+                                    Health
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <th rowspan="1" colspan="1">ID</th>
+                                <th rowspan="1" colspan="1">Address</th>
+                                <th rowspan="1" colspan="1">Contact Number</th>
+                                <th rowspan="1" colspan="1">Email</th>
+                                <th rowspan="1" colspan="1">Age</th>
+                                <th rowspan="1" colspan="1">Gender</th>
+                                <th rowspan="1" colspan="1">Health</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 {% block javascript %}
