added dummy data for health report

--- a/static/base/css/custom.css
+++ b/static/base/css/custom.css
@@ -802,6 +802,11 @@ tr:hover{
   border-radius: 10px;
 }
 
+.bg_img {
+    /*background-image: url("../images/health-care.jpg");*/
+    /*background-color: #9fcdff !important;*/
+}
+
 .dropdown-menu li {
   text-transform: capitalize;
 }
