redirected sign in and logout page

--- a/templates/health/index.html
+++ b/templates/health/index.html
@@ -39,7 +39,7 @@
                         <span class="text">sunya@email.com</span>
                     </div>
                     <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right justify-content-end">
-                        <p class="mb-0 register-link"><a href="#">Sign In</a></p>
+                        <p class="mb-0 register-link"><a href="{% url 'login' %}">Sign In</a></p>
                     </div>
                 </div>
             </div>
