Added logo of sunya

--- a/static/base/css/custom.css
+++ b/static/base/css/custom.css
@@ -71,8 +71,8 @@ a {
 }
 
 .logo-tag img {
-  max-height: 30px;
-  margin-right: 5px;
+  max-height: 55px;
+  margin-top: 1px;
 }
 
 .header-navbar .nav-pills>li>a {
