--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,7 @@
         <div class="header-content clearfix">
             <div class="header-left clearfix pull-left">
                 <h1 class="pull-left logo-tag">
-                    {#                        <a href="{% url 'index' %}"><img src="{{ STATIC_URL }}/base/images/logo2.png" alt="Ekbana" height="20"><span>Task Scheduler</span>#}
-                    <a href="{% url 'index' %}"><span style="width: 40px; height: 25px; font-weight: bold;">SUNYA</span>
+                    <a href="{% url 'index' %}"><img src="{{ STATIC_URL }}/health/images/sunya_logo.png" alt="Sunya">
                     </a></h1>
             </div>
             <div class="header-right clearfix pull-right">
