--- a/templates/health/index.html
+++ b/templates/health/index.html
@@ -48,7 +48,9 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Sunya</a>
+        <a class="navbar-brand" href="index.html">
+            <img style="height: 65px; width: 110px" src="{{ STATIC_URL }}/health/images/sunya_logo.png" alt="Sunya">
+        </a>
         <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
@@ -516,7 +518,9 @@
         <div class="row">
             <div class="col-md-12 text-center">
 
-                <h2 class="ftco-heading-2">Sunya</h2>
+                <h2 class="ftco-heading-2">
+                    <img style="height: 65px; width: 110px" src="{{ STATIC_URL }}/health/images/sunya_logo.png" alt="Sunya">
+                </h2>
                 <p>Health Care Service</p>
                 <ul class="ftco-footer-social list-unstyled mt-5">
                     <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -530,7 +534,7 @@
                     <li><a href="#"><span class="icon icon-envelope pr-4"></span><span class="text">sunya@email.com</span></a></li>
                 </ul>
 
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="#" target="_blank">Sunya</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by Sunya
             </div>
         </div>
     </div>
