--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-sm-12">
 
-                        <table id="tasks" class="table table-striped table-bordered dataTable"
+                        <table id="dt-healthList" class="table table-striped table-bordered dataTable"
                                style="width: 100%;" role="grid" aria-describedby="example_info">
                             <thead>
                             <tr role="row">
@@ -18,6 +18,16 @@
                                     aria-sort="ascending"
                                     aria-label="Name: activate to sort column descending">
                                     ID
+                                </th>
+                                <th class="sorting_asc" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-sort="ascending"
+                                    aria-label="Name: activate to sort column descending">
+                                    First Name
+                                </th>
+                                <th class="sorting_asc" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
+                                    aria-sort="ascending"
+                                    aria-label="Name: activate to sort column descending">
+                                    Last Name
                                 </th>
                                 <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
                                     aria-label="Position: activate to sort column ascending">
@@ -51,8 +61,10 @@
                             <tfoot>
                             <tr>
                                 <th rowspan="1" colspan="1">ID</th>
+                                <th rowspan="1" colspan="1">First Name</th>
+                                <th rowspan="1" colspan="1">Last Name</th>
                                 <th rowspan="1" colspan="1">Address</th>
-                                <th rowspan="1" colspan="1">Contact Number</th>
+                                <th rowspan="1" colspan="1">Contact No.</th>
                                 <th rowspan="1" colspan="1">Email</th>
                                 <th rowspan="1" colspan="1">Age</th>
                                 <th rowspan="1" colspan="1">Gender</th>
@@ -66,7 +78,33 @@
         </div>
     </div>
 
+    <div class="modal fade" id="healthModal" tabindex="-1" role="dialog" aria-labelledby="healthModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Edit Job</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <input id="user" name="user" class="form-control" type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 {% block javascript %}
+
+    <script>
+        $(document).ready(function() {
+            $('#dt-healthList').DataTable({
+                data: {{ health_data|safe }},
+                deferRender:true,
+                {#scrollY:200,#}
+            });
+        } );
+    </script>
 {% endblock %}
