--- a/templates/dashboard_user.html
+++ b/templates/dashboard_user.html
@@ -116,7 +116,7 @@
                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Urine Test</span>
                                     <table style="width: 25%; margin-left: 30px">
                                         <tr role="row" style="color: #0b2e13">
-                                            <td style="text-align: left">leukocytes</td>
+                                            <td style="text-align: left">Leukocytes</td>
                                             <td style="text-align: left">{{ health_details.urine_test.leukocytes }}</td>
                                         </tr>
                                         <tr role="row" style="color: #0b2e13">
