--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -113,6 +113,8 @@
                                 <div class="row">
                                     <div class="col-sm-12">
 
+                                        <input style="float: right" class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY">
+
                                         <table id="user_health" class="table table-striped table-bordered">
 
                                             <tr role="row">
@@ -283,7 +285,7 @@
 
     <script>
         $('.health').on('click', function () {
-            var values = $(this).data('values');
+            let values = $(this).data('values');
             regex = /'/gi;
             user_details = JSON.parse(values.user.replace(regex, '"'));
             vital_sign_details = JSON.parse(values.vital_sign.replace(regex, '"'));
@@ -327,6 +329,16 @@
             document.getElementById('u_glucose').innerHTML=urine_test_details.glucose;
             document.getElementById('ascorbic_acid').innerHTML=urine_test_details.ascorbic_acid;
         })
+    </script>
+
+        <script>
+        $(function() {
+            $("#datepicker").datepicker().on('change', function() {
+                // select on change
+                let date = $("#datepicker").datepicker("getDate");
+                console.log($.datepicker.formatDate("dd-mm-yy", date));
+            });
+        });
     </script>
 
 {% endblock %}
