--- a/static/base/css/custom-media.css
+++ b/static/base/css/custom-media.css
@@ -1,219 +1,270 @@
-@media (min-width: 768px)  {
-  .form-inline .form-group {
-    vertical-align: top;
-  }
+@media (max-width: 1440px) {
+    .setting-block ul {
+        height: 175px;
+    }
 
-}
+    .setting-block ul li {
+        margin: 0 5px 0;
+    }
 
-@media (max-width: 1800px) {
-  .setting-block ul {
-    height: 175px;
- }
+    .setting-block ul li .srv-icon {
+        font-size: 23px;
+        width: 60px;
+        height: 60px;
+        margin: 0 auto 10px;
+        line-height: 60px;
+    }
 
- .setting-block ul li {
-    margin: 0 5px 0;
-  }
+    .srv-link {
+        font-size: 15px;
+    }
 
-  .setting-block ul li .srv-icon {
-    font-size: 23px;
-    width: 60px;
-    height: 60px;
-    margin: 0 auto 10px;
-    line-height: 60px;
-  }
+    body {
+        font-size: 15px;
+    }
 
-  .srv-link {
-    font-size: 15px;
-  }
+    .page-header h3 {
+        font-size: 15px;
+    }
 
-  body {
-    font-size: 15px;
-  }
+    .user-info {
+        width: 37%;
+        margin-left: 30px;
+    }
 
-  .page-header h3 {
-    font-size: 15px;
-  }
+    .health-info {
+        width: 22%;
+        margin-left: 30px;
+    }
+
+    .d-user-info {
+        width: 70%;
+        margin-left: 30px;
+    }
+    .d-health-info {
+        width: 40%;
+        margin-left: 30px;
+    }
 }
 
 @media (max-width: 1325px) {
-  .custom-panel .panel-body {
-    padding-left: 0;
-    padding-right: 0;
-  }
+    .custom-panel .panel-body {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
-  .page-header h3 p {
-    float: none !important;
-    margin-top: 5px;
-  }
-}
+    .page-header h3 p {
+        float: none !important;
+        margin-top: 5px;
+    }
 
-@media (min-width: 1201px) {
-  .toggle-page .ul-sidebar li ul {
-    transform: translate3d(50px -42px 0);
-    -webkit-transform: translate3d(50px, -42px, 0);
-    left: 0;
-    position: fixed;
-    width: 170px;
-    display: block;
-    background-color: #fafafa;
-    border: solid 1px #eee;
-    box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.1);
-    visibility: hidden;
-    opacity: 0;
-    height: auto !important;
-  }
+    .user-info {
+        width: 57%;
+        margin-left: 30px;
+    }
 
-  .toggle-page .ul-sidebar li:hover ul {
-    visibility: visible;
-    opacity: 1;
-  }
+    .health-info {
+        width: 40%;
+        margin-left: 30px;
+    }
+
+    .d-user-info {
+        width: 75%;
+        margin-left: 30px;
+    }
+
+    .d-health-info {
+        width: 40%;
+        margin-left: 30px;
+    }
 }
 
 @media (max-width: 1200px) {
-  .nav-sidebar {
-    width: 50px;
-  }
+    .nav-sidebar {
+        width: 50px;
+    }
 
-  .toggle-page .nav-sidebar {
-    width: 220px;
-    box-shadow: inset -2px 0 0 #e5e5e5, 2px 1px 3px rgba(0,0,0,0.1);
-  }
+    .toggle-page .nav-sidebar {
+        width: 220px;
+        box-shadow: inset -2px 0 0 #e5e5e5, 2px 1px 3px rgba(0,0,0,0.1);
+    }
 
-  .page-wrapper {
-    padding-left: 50px;
-  }
+    .page-wrapper {
+        padding-left: 50px;
+    }
 
-  .toggle-button {
-    width: 48px;
-  }
+    .toggle-button {
+        width: 48px;
+    }
 
-  .toggle-page .toggle-button {
-    width: 218px;
-  }
+    .toggle-page .toggle-button {
+        width: 218px;
+    }
 
-  .toggle-button span {
-    opacity: 0;
-    display: none;
-  }
+    .toggle-button span {
+        opacity: 0;
+        display: none;
+    }
 
-  .toggle-button:before {
-    content: '\f101';
-  }
+    .toggle-button:before {
+        content: '\f101';
+    }
 
-  .toggle-page .toggle-button span {
-    display: inline-block;
-    opacity: 1;
-  }
+    .toggle-page .toggle-button span {
+        display: inline-block;
+        opacity: 1;
+    }
 
-  .toggle-page .toggle-button:before {
-    content: '\f100';
-  }
+    .toggle-page .toggle-button:before {
+        content: '\f100';
+    }
 
-  .span-link,
-  .ul-sidebar a.arw:after {
-    display: none;
-  }
+    .span-link,
+    .ul-sidebar a.arw:after {
+        display: none;
+    }
 
-  .toggle-page .span-link,
-  .toggle-page .ul-sidebar a.arw:after {
-    display: block;
-  }
+    .toggle-page .span-link,
+    .toggle-page .ul-sidebar a.arw:after {
+        display: block;
+    }
 
-  .ul-sidebar li a i {
-    float: none;
-    display: block;
-    height: 18px;
-  }
+    .ul-sidebar li a i {
+        float: none;
+        display: block;
+        height: 18px;
+    }
 
-  .toggle-page .ul-sidebar li a i {
-    display: inline-block;
-    float: left;
-    height: auto;
-  }
+    .toggle-page .ul-sidebar li a i {
+        display: inline-block;
+        float: left;
+        height: auto;
+    }
 
-  .page-wrapper:not(.toggle-page) .ul-sidebar li ul {
-    transform: translate3d(50px -42px 0);
-    -webkit-transform: translate3d(50px, -42px, 0);
-    left: 0;
-    position: fixed;
-    width: 170px;
-    display: block;
-    background-color: #fafafa;
-    border: solid 1px #eee;
-    box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.1);
-    visibility: hidden;
-    opacity: 0;
-    height: auto !important;
-  }
+    .page-wrapper:not(.toggle-page) .ul-sidebar li ul {
+        -webkit-transform: translate3d(50px, -42px, 0);
+        left: 0;
+        position: fixed;
+        width: 170px;
+        display: block;
+        background-color: #fafafa;
+        border: solid 1px #eee;
+        box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.1);
+        visibility: hidden;
+        opacity: 0;
+        height: auto !important;
+    }
 
-  .page-wrapper:not(.toggle-page) .ul-sidebar li ul li a {
-    padding-left: 25px;
-  }
+    .page-wrapper:not(.toggle-page) .ul-sidebar li ul li a {
+        padding-left: 25px;
+    }
 
-  .page-wrapper:not(.toggle-page) .ul-sidebar li:hover ul {
-    visibility: visible;
-    opacity: 1;
-  }
+    .page-wrapper:not(.toggle-page) .ul-sidebar li:hover ul {
+        visibility: visible;
+        opacity: 1;
+    }
 
-  .ul-sidebar ul li:first-child {
-    display: block;
-  }
+    .ul-sidebar ul li:first-child {
+        display: block;
+    }
 
-  .toggle-page .ul-sidebar ul li:first-child {
-    display: none;
-  }
+    .toggle-page .ul-sidebar ul li:first-child {
+        display: none;
+    }
 
-  .logo-large {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-  }
+    .logo-large {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+    }
 
-  .logo-small {
-    opacity: 1;
-    visibility: visible;
-    position: relative;
-  }
+    .logo-small {
+        opacity: 1;
+        visibility: visible;
+        position: relative;
+    }
 
-  .logo-tag {
-    width: 50px;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+    .logo-tag {
+        width: 50px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 
-  .toggle-page .logo-tag {
-    width: 220px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+    .toggle-page .logo-tag {
+        width: 220px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
-  .toggle-page .logo-large {
-    opacity: 1;
-    visibility: visible;
-    position: relative;
-  }
+    .toggle-page .logo-large {
+        opacity: 1;
+        visibility: visible;
+        position: relative;
+    }
 
-  .toggle-page .logo-small {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-  }
+    .toggle-page .logo-small {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+    }
 
-  .custom-search-head {
-             left: 50px;
-     }
+    .custom-search-head {
+        left: 50px;
+    }
 
-     .toggle-page .custom-search-head {
-         left: 220px;
-     }
+    .toggle-page .custom-search-head {
+        left: 220px;
+    }
 
+    .user-info {
+        width: 44%;
+        margin-left: 30px;
+    }
+
+    .health-info {
+        width: 25%;
+        margin-left: 30px;
+    }
+
+    .d-user-info {
+        width: 75%;
+        margin-left: 30px;
+    }
+
+    .d-health-info {
+        width: 42%;
+        margin-left: 30px;
+    }
 
 }
 
+@media (max-width: 768px)  {
+    .form-inline .form-group {
+        vertical-align: top;
+    }
 
-@media (max-width: 991px) {
+    .user-info {
+        width: 60%;
+        margin-left: 30px;
+    }
 
+    .health-info {
+        width: 34%;
+        margin-left: 30px;
+    }
+
+    .d-user-info {
+        width: 75%;
+        margin-left: 30px;
+    }
+
+    .d-health-info {
+        width: 43%;
+        margin-left: 30px;
+    }
 }
+
+
 
 
 
