--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -126,7 +126,7 @@
                                                 <td style="text-align: left">
                                                     <span style="font-size: 20px;font-weight: revert">Health Report</span> <br>
                                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">User Info</span>
-                                                    <table style="width: 80%; margin-left: 30px">
+                                                    <table class="d-user-info">
                                                         <tr role="row" style="color: #0b2e13">
                                                             <td style="text-align: left">ID</td>
                                                             <td style="text-align: left" id="username">
@@ -165,7 +165,7 @@
                                             <tr role="row">
                                                 <td style="text-align: left">
                                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Vital Sign</span>
-                                                    <table style="width: 40%; margin-left: 30px">
+                                                    <table class="d-health-info">
                                                         <tr role="row" style="color: #0b2e13">
                                                             <td style="text-align: left">Weight (kg)</td>
                                                             <td style="text-align: left" id="weight">
@@ -200,7 +200,7 @@
                                             <tr role="row">
                                                 <td style="text-align: left">
                                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Blood Test</span>
-                                                    <table style="width: 40%; margin-left: 30px">
+                                                    <table class="d-health-info">
                                                         <tr role="row" style="color: #0b2e13">
                                                             <td style="text-align: left">Glucose</td>
                                                             <td style="text-align: left" id="b_glucose">
@@ -219,7 +219,7 @@
                                             <tr role="row">
                                                 <td style="text-align: left">
                                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Urine Test</span>
-                                                    <table style="width: 40%; margin-left: 30px">
+                                                    <table class="d-health-info">
                                                         <tr role="row" style="color: #0b2e13">
                                                             <td style="text-align: left">Leukocytes</td>
                                                             <td style="text-align: left" id="leukocytes">
