--- a/templates/dashboard_user.html
+++ b/templates/dashboard_user.html
@@ -22,7 +22,7 @@
                                 <td style="text-align: left">
                                     <span style="font-size: 20px;font-weight: revert">Health Report</span> <br>
                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">User Info</span>
-                                    <table style="width: 32%; margin-left: 30px">
+                                    <table class=user-info>
                                         <tr role="row" style="color: #0b2e13">
                                             <td style="text-align: left">ID</td>
                                             <td style="text-align: left">{{ health_details.user.username }}</td>
@@ -61,7 +61,7 @@
                             <tr role="row">
                                 <td style="text-align: left">
                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Vital Sign</span>
-                                    <table style="width: 20%; margin-left: 30px">
+                                    <table class="health-info">
                                         <tr role="row" style="color: #0b2e13">
                                             <td style="text-align: left">Weight (kg)</td>
                                             <td style="text-align: left">{{ health_details.vital_sign.weight }}</td>
@@ -96,7 +96,7 @@
                             <tr role="row">
                                 <td style="text-align: left">
                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Blood Test</span>
-                                    <table style="width: 20%; margin-left: 30px">
+                                    <table class="health-info">
                                         <tr role="row" style="color: #0b2e13">
                                             <td style="text-align: left">Glucose</td>
                                             <td style="text-align: left">{{ health_details.blood_test.glucose }}</td>
@@ -115,7 +115,7 @@
                             <tr role="row">
                                 <td style="text-align: left">
                                     <span style="font-size: 16px;font-weight: revert; color: #cc1111">Urine Test</span>
-                                    <table style="width: 20%; margin-left: 30px">
+                                    <table class="health-info">
                                         <tr role="row" style="color: #0b2e13">
                                             <td style="text-align: left">Leukocytes</td>
                                             <td style="text-align: left">{{ health_details.urine_test.leukocytes }}</td>
