desing flow changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,11 +61,12 @@
         <div class="inner-navbar clearfix">
             <ul class="ul-sidebar" id="accordion">
                 {% for v in nav_sidebar %}
-                    {% if v.name == "Settings" %}
+                    {% if v.name == "Settings" or v.name == "Bags" %}
                         {% if user_own.is_superuser %}
                             <li><a href="{% url v.url %}"><i style="margin-top: -3px;">
                                 <img src="{{ v.icon_path }}{{ v.icon_name }}"></i>
-                                <span class="span-link">{{ v.name }}</span></a></li>
+                                <span class="span-link">{{ v.name }}</span></a>
+                            </li>
                         {% endif %}
                     {% else %}
                         <li><a href="{% url v.url %}"><i style="margin-top: -3px;">
@@ -74,6 +75,7 @@
                     {% endif %}
 
                 {% endfor %}
+
             </ul>
             <a class="toggle-button" role="button" title="Toggle sidebar"
                type="button"><span>Collapse Sidebar</span></a>
