--- a/templates/health/index.html
+++ b/templates/health/index.html
@@ -63,7 +63,7 @@
                 <li class="nav-item"><a href="#department-section" class="nav-link"><span>Department</span></a></li>
                 <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
                 <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-                <li class="nav-item"><a href="{% url 'client_report' %}" class="nav-link"><span>Report</span></a></li>
+{#                <li class="nav-item"><a href="{% url 'client_report' %}" class="nav-link"><span>Report</span></a></li>#}
             </ul>
         </div>
     </div>
